# sentieopy3_template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/config/: settings.toml
{{cookiecutter.project_slug}}/proto/: .gitignore
{{cookiecutter.project_slug}}/proto/{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/proto/{{cookiecutter.project_slug}}/sentieo/proto/{{cookiecutter.project_team}}/{{cookiecutter.project_name}}/v1/: helloworld.proto
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/py/: server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/py/services/{{cookiecutter.project_name}}/: service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_team}}/{{cookiecutter.project_name}}/app/py/: server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/{{cookiecutter.project_team}}/{{cookiecutter.project_name}}/app/py/services/tests/: test_helloworld.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_team}}/{{cookiecutter.project_name}}/app/py/: server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_team}}/{{cookiecutter.project_name}}/app/py/services/{{cookiecutter.project_name}}/: service.py
