[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name}} <{{ cookiecutter.email }}>"
]

readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
dynaconf = {version = "^3.1.7", extras = ["vault"]}
grpcio = "^1.27.2"
protobuf = "^3.11.3"
{% if cookiecutter.database == 'PostgreSQL' %}
# TODO(asandeep): Add DB drivers for other databases as well.
psycopg2-binary = "^2.8.5"
{% endif %}

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-mock = "^2.0.0"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
isort = "^4.3.21"
grpcio-testing = "^1.27.2"
grpcio-tools = "^1.27.2"
mypy-protobuf = "^1.19"
{% if cookiecutter.install_precommit_hooks == "y" %}
pre-commit = "^2.1.1"
{% endif %}


[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli.main:main"


[tool.black]
line-length = 80


[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
