[tool.poetry]
authors     = ["{{cookiecutter.full_name}} {{cookiecutter.email}}"]
description = ""
name        = "{{cookiecutter.project_slug}}-proto"
version = "0.0.1"

packages = [{ include = "sentieo" }]

# behavior of excluding .gitignore files.
exclude = ["*/**/*.proto"]

# Explicitly include the generated python files to override Poetry's default
include = [
    # Include User Settings proto defs.
    "sentieo/**/*.py",
    # Include PGV proto defs.
   # "protoc_gen_validate/**/*.py",
]


[tool.poetry.dependencies]
python = ">=2.7"


[tool.poetry.dev-dependencies]
grpcio-tools  = "^1.34.0"
mypy-protobuf = "^1.23"


[build-system]
build-backend = "poetry.masonry.api"
requires      = ["poetry>=0.12"]
